Workflow strategy talk shuffled from what is now the scratchnotes file.

--- a/presentations/slides/session-lonestarphp.html
+++ b/presentations/slides/session-lonestarphp.html
@@ -43,7 +43,7 @@
       <div class="slides">
 
         <section data-markdown="00-instructor-intro.md" data-separator="^\n={4,}" data-vertical="^\n-{4,}" data-notes="^Note:"></section>
-        <section data-markdown="session-lonestarphp.md" data-separator="^={10,}" data-vertical="^\n\n" data-notes="^Note:[^\n]"></section>
+        <section data-markdown="session-lonestarphp-strategy.md" data-separator="^={10,}" data-vertical="^\n\n" data-notes="^Note:[^\n]"></section>
         <section data-markdown="00-exit-evals.md" data-separator="^\n={4,}" data-vertical="^\n-{4,}" data-notes="^Note:"></section>
       </div>
 
