Formatting adjustment to fix markdown display
* Removed new line so that the slide contents would be interpreted
  as markdown.

--- a/slides/slides/session-oscon.html
+++ b/slides/slides/session-oscon.html
@@ -54,8 +54,7 @@
 
         <!-- instructor intro -->
         <section data-markdown="" data-separator="^\n={4,}" data-vertical="^\n-{4,}" data-notes="^Note:">
-        
-        ## Hello! My Name is [Emma](http://en.wikipedia.org/wiki/Emma_Jane_Hogbin)
+        ## Hello! My Name is [Emma](http://en.wikipedia.org/wiki/Emma_Jane_Hogbin)</h2>
         
         Note: I have been using version control for 10+ years and had the great misfortune of teaching CVS to arts majors before distributed version control was a thing.
         </section>
