Remove slide transition for those who suffer from vestibular disorder.

--- a/slides/slides/TEMPLATE.html
+++ b/slides/slides/TEMPLATE.html
@@ -64,7 +64,7 @@
 				center: true,
 
 				theme: Reveal.getQueryHash().theme, // available themes are in /css/theme
-				transition: Reveal.getQueryHash().transition || 'default', // default/cube/page/concave/zoom/linear/fade/none
+				transition: Reveal.getQueryHash().transition || 'none', // default/cube/page/concave/zoom/linear/fade/none
 
 				// Optional libraries used to extend on reveal.js
 				dependencies: [
