--- a/slides/slides/session-lonestarphp.html
+++ b/slides/slides/session-lonestarphp.html
@@ -73,7 +73,7 @@ https://github.com/DrupalizeMe/workflow-git-workshop
         center: true,
 
         theme: Reveal.getQueryHash().theme, // available themes are in /css/theme
-        transition: Reveal.getQueryHash().transition || 'default', // default/cube/page/concave/zoom/linear/fade/none
+        transition: Reveal.getQueryHash().transition || 'none', // default/cube/page/concave/zoom/linear/fade/none
 
         multiplex: {
             secret: null,
