--- a/slides/slides/workshop-oscon.html
+++ b/slides/slides/workshop-oscon.html
@@ -94,7 +94,7 @@
         center: true,
 
         theme: Reveal.getQueryHash().theme, // available themes are in /css/theme
-        transition: Reveal.getQueryHash().transition || 'default', // default/cube/page/concave/zoom/linear/fade/none
+        transition: Reveal.getQueryHash().transition || 'none', // default/cube/page/concave/zoom/linear/fade/none
 
         multiplex: {
             secret: null,
