Theme: Switch from Drupalize.Me theme to O'Reilly pink

--- a/slides/slides/workshop-oscon.html
+++ b/slides/slides/workshop-oscon.html
@@ -15,7 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
     <link rel="stylesheet" href="../lib/reveal.js/css/reveal.min.css">
-    <link rel="stylesheet" href="../lib/themes/drupalize.me/drupalize.me.css" id="theme">
+    <link rel="stylesheet" href="../lib/themes/gitforteams/oreilly-pink.css" id="theme">
 
     <!-- No caching! -->
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
